# prow-jobs-scraper

./: pyproject.toml
.github/: dependabot.yml
.tekton/: prow-jobs-scraper-saas-main-pull-request.yaml  prow-jobs-scraper-saas-main-push.yaml
openshift/: template.yaml
src/jobsautoreport/: main.py  models.py  plot.py  query.py  report.py  slack.py  trends.py
src/jobsautoreport/slack/: slack_report.py
src/projects/: config.py
src/projects/jobsautoreport/: config.py  main.py  models.py  query.py  report.py  slack.py
src/projects/prowjobsscraper/: config.py  equinix.py  event.py  main.py  scraper.py  step.py
src/providers/: aws.py  common.py  equinix.py  ibm_cloud.py  provider.py
src/prowjobsscraper/: cir_metadata.py  equinix_metadata.py  equinix_usages.py  event.py  main.py  prowjob.py  scraper.py
tests/elasticsearch_cleanup/assets/: job_assets.json  step_assets.json
tests/jobsautoreport/: test_report.py  test_slack.py  test_slack_report.py  test_trends.py
tests/prowjobsscraper/: test_cir_metadata.py  test_equinix.py  test_event.py  test_prowjob.py  test_scraper.py  test_step.py
tests/prowjobsscraper/cir_metadata_assets/: aws_metadata.json  cir_aws_metadata.json  cir_equinix_metadata.json  cir_ibm_metadata.json  equinix_metadata.json  ibm_metadata.json
tests/prowjobsscraper/event_assets/: expected_step_event.json  jobstep.json
tests/prowjobsscraper/prowjob_assets/: expected_prowjobs.json
