[build-system]
requires = [
    "setuptools>=74.1.2",
    "setuptools_scm[toml]>=8.1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "prow-jobs-scraper"
description = "Scrape Prow for job results and export them to elasticsearch"
readme = "README.md"
keywords = ["prow"]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "requests==2.32.4",
    "google-cloud-storage==3.2.0",
    "junitparser==4.0.2",
    "pydantic==1.10.22",
    "opensearch-py==3.0.0",
    "slack_sdk==3.35.0",
    "plotly==6.2.0",
    "kaleido==1.0.0",
    "python-dateutil==2.9.0.post0",
    "retry==0.9.2",
    "pandas==2.3.1",
    "numpy==2.2.4",
    "mmh3==5.1.0",
]
dynamic = ["version"]

[project.scripts]
prow-jobs-scraper = "prowjobsscraper.main:main"
jobs-auto-report = "jobsautoreport.main:main"
elasticsearch-cleanup = "elasticsearch_cleanup.main:main"

[project.optional-dependencies]
test-runner = [
    "tox==4.27.0",
]
unit-tests = [
    "freezegun==1.5.2",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-httpserver==1.1.3",
]
coverage = [
    "coverage[toml]==7.9.2",
]
lint = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.16.1",
    "setuptools==80.9.0",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = clean,python3.11,report

[testenv]
usedevelop=True
commands = pytest --cov=src --cov-append --cov-report=term-missing --junitxml=junit-{envname}.xml --junit-prefix={envname} {posargs}
deps = .[unit-tests]
depends =
    {python3.11}: clean
    report: python3.11

[testenv:report]
deps = .[coverage]
skip_install = true
commands =
    coverage report
    coverage html
    coverage xml

[testenv:clean]
deps = .[coverage]
skip_install = true
commands = coverage erase
"""
